# genai-datax-language-confusion-and-multilingual-performance

./: .env.template  .gitignore  LICENSE  README.md  pyproject.toml
analysis/: 00_translation.ipynb  01_agg_results.ipynb  02_base_vs_cpt.ipynb  03_prompt_variation.ipynb  05_model_type_level.ipynb
data/analysis/: long_form_generation_results.csv  short_form_generation_results.csv  translation.csv
data/input/: thai_exams.xlsx  thai_exams_translated.xlsx
data/prep_main_questions/: THAI_EXAM_question_gen.ipynb  THAI_EXAM_question_prep.ipynb  WTI_CQA_question_gen.ipynb  WTI_MC_question_gen.ipynb  WTI_SUM_question_gen.ipynb
scripts/: eval.sh  gen_long_form.sh  gen_mc.sh
scripts/eval/: lang_id.py  rouge.py  uncertainty.py
src/evaluation/: __init__.py  ifhr.py  language_id.py  rouge.py  uncertainty.py
src/evaluation/similarity/: __init__.py  jaccard.py  nli.py
src/generation/: data_gen_api.py  data_gen_host.py  unified_data_gen.py
src/llm/: api.py  constants.py  host.py
src/translation/: manual_validation.ipynb  thai_exams.py  wti.py
src/utils/: data.py  misc_functions.py  viz.py
